# tika-wrap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  demo1.cpp
src/: CMakeLists.txt  java-env.cpp  java-env.h  main.cpp
tika/: pom.xml
tika-bundles/tika-bundle-standard/: dependency-reduced-pom.xml
tika/tika-main/: dependency-reduced-pom.xml  pom.xml
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/: TikaMain.java  package-info.java
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/FileOperation/: AutoParser.java  FullParser.java  Rar5Parser.java  TikaFileExtractor.java
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/ndimporter/clue/: Clue.java  ClueItem.java  ClueManager.java  ProtocolClues.java
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/ndimporter/common/: IKAnalyzerUtils.java  MurmurHash.java  ObjectTranscoder.java
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/ndimporter/fingerprint/exception/: NoFeatureInformationException.java
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/ndimporter/fingerprint/service/: SimHashService.java  SimHashService2.java
tika/tika-main/src/main/java/com/github/dingjingmaster/tika/main/ndimporter/kwdmatch/: LabelbyKeywords.java  MyMoreLikeThis.java  TestLabel.java
tika/tika-main/src/test/java/com/github/dingjingmaster/tika/main/: TikaMainTest.java
tika/tika-pipes/tika-fetchers/tika-fetcher-microsoft-graph/: pom.xml
tika/tika-translate/: pom.xml
